# Advent-of-Code

./: .gitmodules  README.md  pyproject.toml
2021/solutions from old repo/Day 1/: code.py  nice_solutions.py
2021/solutions from old repo/Day 2/: code.py
2021/solutions from old repo/Day 3/: code.py
2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  setup_dir.py
2022/Day 1 (old)/: solution.py
2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py
