[tool.poetry]
name = "advent of code 2022"
version = "0.1.0"
description = ""
authors = ["Chiew Yan Wei <chiewyanwei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aoc-lube = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
